# libghostty-rs

./: AGENTS.md  Cargo.toml  README.md  flake.nix
crates/ghostty/: Cargo.toml  README.md
crates/ghostty-sys/: Cargo.toml  README.md  build.rs
crates/ghostty-sys/src/: bindings.rs  lib.rs
crates/ghostty-sys/tools/: gen_bindings.rs
crates/ghostty/src/: lib.rs
crates/libghostty-vt-sys/: build.rs
crates/libghostty-vt-sys/src/: bindings.rs
crates/libghostty-vt/src/: render.rs  style.rs  terminal.rs
example/ghostling_rs/: Cargo.toml  README.md
example/ghostling_rs/src/: main.rs
