[workspace]
members = ["crates/ghostty", "crates/ghostty-sys", "example/ghostling_rs"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
ghostty = { path = "crates/ghostty", version = "0.1.0" }
ghostty-sys = { path = "crates/ghostty-sys", version = "0.1.0" }
